# audio-quest

./: .gitignore  README.md  SELF_NOTES.md  TODO.md  package-lock.json  package.json
AudioProcessor/: .gitignore  Cargo.toml  README.md  build.rs  build_errors.txt  test_run.sh  test_websocket.html  test_websocket.js
AudioProcessor/client/: index.html
AudioProcessor/src/: main.rs  proto_mod.rs  state.proto  state.rs  tui.rs
AudioProcessor/src/audio/: constants.rs  mod.rs  processor.rs
AudioProcessor/src/websocket/: server.rs
Frontend/: ShaderSpawner.md  example.env  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
Frontend/.cursor/rules/: glslmaker.mdc  glslmaker_v2.mdc  make-a-shader.mdc  uniforms.mdc
Frontend/docs/audio_visualizers/: AmplitudeVisualizer.md  BeatIntensityPulsar.md  ConceptualVisualizers.md
Frontend/public/: TRIP_VIDEOS  data  files  mask-data.json  state.proto  video-data.json
Frontend/public/docs/: shader.md
Frontend/public/models/: bird.glb
Frontend/scripts/: clear-video-settings.js  generateVideoMetadata.js
Frontend/src/Freq530/: PRIMARY_SCENE_CONTENT.tsx  constants.ts  types.ts  utils.ts
Frontend/src/Freq531/: BACKUP_2FreqTest.tsx  BACKUP_FreqTest.tsx  FreqTest.tsx  VIDEO_PATHS.ts  hud.css  types.ts  utils.ts
Frontend/src/Freq532/: PRIMARY_SCENE_CONTENT.tsx  (+1 more)
Sorter/scripts/: Readme.md  sort.js  update.js
docs/: AMPLITUDE_SMOOTHING_GUIDE.md
scripts/: generateVideoMetadata.js  install-cargo.sh  install-node.sh
scripts/install/: 35screen.sh  install-cargo.sh  install-node.sh
(+229 files in other folders)
