[package]
name = "audio-websocket-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rustfft = "6.1"
prost = "0.12"
prost-derive = "0.12"
image = "0.25"

[build-dependencies]
prost-build = "0.12"